Affichage d'infos de calcul

--- a/blazor-impots/_Imports.razor
+++ b/blazor-impots/_Imports.razor
@@ -3,5 +3,5 @@
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
-@using blazor_impots
-@using blazor_impots.Shared
+@using BlazorImpots
+@using BlazorImpots.Model
