--- a/blazor-impots/Components/Index.razor
+++ b/blazor-impots/Components/Index.razor
@@ -50,16 +50,16 @@
                         </td>
                     </tr>
                     <tr>
-                            <td>Parts supplémentaires :</td>
-                            <td>
-                                <input type="number" bind="Model.PartsSupplementaires" min="0" max="5" step="0.25"
-                                       id="partsSupplementaires" class="form-control form-control-sm" />
-                            </td>
-                            <td>
-                                <i class="far fa-question-circle" data-toggle="tooltip" data-placement="right"
-                                   title="Certaines situations (invalide, anciens combattant, ...) peuvent donner droit à des majoration de parts."></i>
-                            </td>
-                        </tr>
+                        <td>Parts supplémentaires :</td>
+                        <td>
+                            <input type="number" bind="Model.PartsSupplementaires" min="0" max="5" step="0.25"
+                                   id="partsSupplementaires" class="form-control form-control-sm" />
+                        </td>
+                        <td>
+                            <i class="far fa-question-circle" data-toggle="tooltip" data-placement="right"
+                               title="Certaines situations (invalide, anciens combattant, ...) peuvent donner droit à des majoration de parts."></i>
+                        </td>
+                    </tr>
                     <tr>
                         <td>Nombre de parts :</td>
                         <td>
@@ -75,6 +75,58 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col">
+            <table class="table income">
+                <thead>
+                    <tr>
+                        <th scope="col">Revenus</th>
+                        <th class="d-hidden d-md-table-cell"></th>
+                        <th colspan="3">
+                            @if (Model.Revenus.Any())
+                            {
+                                <button class="btn btn-sm btn-primary float-right" data-toggle="modal"
+                                        data-target="#incomeModal">
+                                    <i class="fas fa-plus"></i> Ajouter des revenus
+                                </button>
+                            }
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (!Model.Revenus.Any())
+                    {
+                        <tr v-if="revenus.length === 0">
+                            <td colspan="6" class="text-center">
+                                <button class="btn btn-lg btn-primary" data-toggle="modal" data-target="#incomeModal">
+                                    <i class="fas fa-plus"></i> Ajouter des revenus
+                                </button>
+                            </td>
+                        </tr>
+                    }
+                    @foreach (var r in Model.Revenus)
+                    {
+                        <tr>
+                            <td>@r.Libelle</td>
+                            <td class="d-none d-md-table-cell">
+                                <input type="range" bind="r.Montant" min="0" max="100000" step="600" v-bind:max="r.maxDisplay" v-bind:step="r.step"
+                                       class="form-control-range" />
+                            </td>
+                            <td>
+                                <input type="number" bind="r.Montant" class="form-control" />
+                            </td>
+                            <td>@(r.Montant/12)&nbsp;€/mois)</td>
+                            <td>
+                                <button class="btn btn-sm btn-danger" click="suppressionRevenus(r)">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 @functions{
