--- a/blazor-impots/Components/Index.razor
+++ b/blazor-impots/Components/Index.razor
@@ -85,10 +85,10 @@
                         <th colspan="3">
                             @if (Model.Revenus.Any())
                             {
-                                <button class="btn btn-sm btn-primary float-right" data-toggle="modal"
-                                        data-target="#incomeModal">
-                                    <i class="fas fa-plus"></i> Ajouter des revenus
-                                </button>
+                            <button class="btn btn-sm btn-primary float-right" data-toggle="modal"
+                                    data-target="#incomeModal" onclick="AjouterRevenu">
+                                <i class="fas fa-plus"></i> Ajouter des revenus
+                            </button>
                             }
                         </th>
                     </tr>
@@ -96,39 +96,46 @@
                 <tbody>
                     @if (!Model.Revenus.Any())
                     {
-                        <tr v-if="revenus.length === 0">
-                            <td colspan="6" class="text-center">
-                                <button class="btn btn-lg btn-primary" data-toggle="modal" data-target="#incomeModal">
-                                    <i class="fas fa-plus"></i> Ajouter des revenus
-                                </button>
-                            </td>
-                        </tr>
+                    <tr v-if="revenus.length === 0">
+                        <td colspan="6" class="text-center">
+                            <button class="btn btn-lg btn-primary" data-toggle="modal"
+                                    data-target="#incomeModal" onclick="AjouterRevenu">
+                                <i class="fas fa-plus"></i> Ajouter des revenus
+                            </button>
+                        </td>
+                    </tr>
                     }
                     @foreach (var r in Model.Revenus)
                     {
-                        <tr>
-                            <td>@r.Libelle</td>
-                            <td class="d-none d-md-table-cell">
-                                <input type="range" bind="r.Montant" min="0" max="100000" step="600" v-bind:max="r.maxDisplay" v-bind:step="r.step"
-                                       class="form-control-range" />
-                            </td>
-                            <td>
-                                <input type="number" bind="r.Montant" class="form-control" />
-                            </td>
-                            <td>@(r.Montant/12)&nbsp;€/mois)</td>
-                            <td>
-                                <button class="btn btn-sm btn-danger" click="suppressionRevenus(r)">
-                                    <i class="fas fa-trash-alt"></i>
-                                </button>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>@r.Libelle</td>
+                        <td class="d-none d-md-table-cell">
+                            <input type="range" bind="r.Montant" min="0" max="100000" step="600" v-bind:max="r.maxDisplay" v-bind:step="r.step"
+                                   class="form-control-range" />
+                        </td>
+                        <td>
+                            <input type="number" bind="r.Montant" class="form-control" />
+                        </td>
+                        <td>@(r.Montant/12)&nbsp;€/mois)</td>
+                        <td>
+                            <button class="btn btn-sm btn-danger" click="suppressionRevenus(r)">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </td>
+                    </tr>
                     }
                 </tbody>
             </table>
         </div>
     </div>
+
+    <AjoutRevenus Model="Model"></AjoutRevenus>
 </div>
 
 @functions{
     private Impots Model { get; } = new Impots();
+
+    private async void AjouterRevenu(){
+        //await JSRuntime.Current.InvokeAsync<bool>("","");
+    }
 }
