Event ajout de revenu

--- a/blazor-impots/Components/Index.razor
+++ b/blazor-impots/Components/Index.razor
@@ -85,8 +85,7 @@
                         <th colspan="3">
                             @if (Model.Revenus.Any())
                             {
-                            <button class="btn btn-sm btn-primary float-right" data-toggle="modal"
-                                    data-target="#incomeModal" onclick="AjouterRevenu">
+                            <button class="btn btn-sm btn-primary float-right" onclick="@AjouterRevenu">
                                 <i class="fas fa-plus"></i> Ajouter des revenus
                             </button>
                             }
@@ -98,8 +97,7 @@
                     {
                     <tr v-if="revenus.length === 0">
                         <td colspan="6" class="text-center">
-                            <button class="btn btn-lg btn-primary" data-toggle="modal"
-                                    data-target="#incomeModal" onclick="AjouterRevenu">
+                            <button class="btn btn-lg btn-primary" onclick="@AjouterRevenu">
                                 <i class="fas fa-plus"></i> Ajouter des revenus
                             </button>
                         </td>
@@ -129,13 +127,20 @@
         </div>
     </div>
 
-    <AjoutRevenus Model="Model"></AjoutRevenus>
+    <AjoutRevenu ref="ajoutRevenusDialog" OnNouveauRevenu="NouveauRevenu"></AjoutRevenu>
 </div>
 
 @functions{
     private Impots Model { get; } = new Impots();
 
+    private AjoutRevenu ajoutRevenusDialog;
+
     private async void AjouterRevenu(){
-        //await JSRuntime.Current.InvokeAsync<bool>("","");
+        await ajoutRevenusDialog.Open();
+    }
+
+    private void NouveauRevenu(NouveauRevenuEventArgs args)
+    {
+        Model.Revenus.Add(args.NouveauRevenu);
     }
 }
