--- a/blazor-impots/Components/AjoutRevenu.razor
+++ b/blazor-impots/Components/AjoutRevenu.razor
@@ -1,4 +1,6 @@
-﻿@using BlazorImpots.Model
+﻿@using BlazorImpots
+@using BlazorImpots.Model
+@using Microsoft.AspNetCore.Components
 
 <!-- Ajout de revenus -->
 <div class="modal fade" id="incomeModal" tabindex="-1" role="dialog">
@@ -41,8 +43,6 @@
         </div>
     </div>
 </div>
-@using BlazorImpots
-@using Microsoft.AspNetCore.Components
 
 @inject Microsoft.JSInterop.IJSRuntime JSRuntime
 @functions{
