Ajout lien "fork me"

--- a/blazor-impots/Components/Index.razor
+++ b/blazor-impots/Components/Index.razor
@@ -3,6 +3,12 @@
 @using BlazorImpots.Components
 @using BlazorImpots.Model
 
+<a href="https://github.com/glacasa/blazor-impots" style="position: absolute; z-index: 1;">
+    <img width="149"
+         height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_left_red_aa0000.png?resize=149%2C149"
+         class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1">
+</a>
+
 <header>
     <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container">
@@ -12,7 +18,6 @@
         </div>
     </div>
 </header>
-
 
 <div class="container">
     <InfoSimu></InfoSimu>
